--- a/src/styles/PhotoBook/PhotoList.module.scss
+++ b/src/styles/PhotoBook/PhotoList.module.scss
@@ -1,45 +1,108 @@
-.photoList {
+.photo {
+  padding: 10px 0;
+  >.error {
+    padding: 0 15px;
+  }
+  >.loading {
+    padding: 0 15px;
+  }
+  >.searchFound {
+    padding: 0 15px;
+  }
+  >.albumFiltered {
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    >.title {
+      position: relative;
+      color: #ffffff;
+      border-radius: 16px;
+      padding: 8px;
+      margin-left: 5px;
+      >.close {
+        position: absolute;
+        top: -8px;
+        right: 0;
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        background: #ffffff;
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+        &::after {
+          position: absolute;
+          top: 6.5px;
+          left: 0;
+          content: '';
+          height: 2px;
+          width: 100%;
+          background: #808080;
+          transform: rotate(45deg);
+        }
+        &::before {
+          position: absolute;
+          top: 6.5px;
+          left: 0;
+          content: '';
+          height: 2px;
+          width: 100%;
+          background: #808080;
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
+  >.list {
     display: flex;
     flex-wrap: wrap;
-    >.card {
-        width: 25%;
-        flex: 0 0 auto;
-        cursor: pointer;
-        background: #ffffff;
-        @media(max-width: 960px) {
-            width: 33.33333333333333%
+    > .card {
+      position: relative;
+      width: 25%;
+      flex: 0 0 auto;
+      background: #ffffff;
+      @media (max-width: 960px) {
+        width: 33.33333333333333%;
+      }
+      @media (max-width: 720px) {
+        width: 50%;
+      }
+      @media (max-width: 540px) {
+        width: 100%;
+      }
+      > .box {
+        padding: 15px;
+        >.title {
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
-        @media(max-width: 720px) {
-            width: 50%
-        }
-        @media(max-width: 540px) {
-            width: 100%
-        }
-        >.box {
-            padding: 15px;
-            >.thumbnailBox {
-                transition: transform .25s ease-in-out;
-                >.thumbnail {
-                    border-radius: 8px;
-                    width: 100%;
-                }
-                &:hover {
-                    position: relative;
-                    transform: scale(1.05);
-                    &::after {
-                        border-radius: 8px;
-                        content: 'test';
-                        color: #ffffff;
-                        text-align: center;
-                        position: absolute;
-                        top: 0px;
-                        left: 0;
-                        width: 100%;
-                        height: 99%;
-                        background: rgba(0, 0, 0, 0.5);
-                    }
-                }
+        > .thumbnailBox {
+          transition: transform 0.25s ease-in-out;
+          > .thumbnail {
+            border-radius: 8px;
+            width: 100%;
+          }
+          &:hover {
+            position: relative;
+            transform: scale(1.05);
+            &::after {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              content: "Preview Image";
+              color: #ffffff;
+              border-radius: 8px;
+              position: absolute;
+              top: 0px;
+              left: 0;
+              width: 100%;
+              height: calc(100% - 2px);
+              background: rgba(0, 0, 0, 0.5);
+              cursor: pointer;
             }
+          }
         }
+      }
     }
+  }
 }
