--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,37 +4,41 @@ $lg: 960px;
 $xl: 1140px;
 $xxl: 1320px;
 
+body {
+  overflow: hidden;
+}
+
 .container {
-    max-width: $xxl;
-    margin: auto;
-    @media(max-width: $xxl) {
-        max-width: $xl;
-    }
-    @media(max-width: $xl) {
-        max-width: $lg;
-    }
-    @media(max-width: $lg) {
-        max-width: $md;
-    }
-    @media(max-width: $sm) {
-        width: 100%;
-    }
+  max-width: $xxl;
+  margin: auto;
+  @media (max-width: $xxl) {
+    max-width: $xl;
+  }
+  @media (max-width: $xl) {
+    max-width: $lg;
+  }
+  @media (max-width: $lg) {
+    max-width: $md;
+  }
+  @media (max-width: $sm) {
+    width: 100%;
+  }
 }
 
 .background-overlay {
-    position: relative;
-    &::after {
-      position: absolute;
-      top: -2px;
-      left: 0;
-      content: '';
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,.1)
-    }
+  position: relative;
+  &::after {
+    position: absolute;
+    top: -2px;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.1);
+  }
 }
 
 .img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
